--- a/index.css
+++ b/index.css
@@ -1,15 +1,56 @@
 body {
-    width: 1000px;
-    height: 700px;}
-
-.page {
-        display: none;
-        width: 79%;
-        height: 100%;
-        border: 1px solid black;
-        float: left;
+	background-image : url("bg.jpg");
 }
 
+#panel {
+    width: 1000px;
+    height: 700px;
+}
+
+div{
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
+}
+
+.page {
+    display: none;
+    width: 100%;
+    height: 100%;
+    float: left;
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
+}
+
+#main{
+    height: 100%;
+    width: 79%;
+	overflow:hidden;
+    float: left;
+    border: 1px solid black;
+}
+
+#support{
+	display: none;
+    height: 100%;
+    width: 200%;
+    float: left;
+	z-index: 30;
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
+}
+
+#support-1,#support-2{
+    height: 100%;
+    width: 50%;
+}
+
+.page-1{
+	background-color: red;
+}
+
+.tablePage{
+	background-color: green;
+}
 .rows {
     height: 10%;
     }
@@ -17,13 +58,15 @@ body {
 .columns {
         width: 10%;
         height: 100%;
-        }
+}
 
 #sideBar {
     width: 20%;
     height: 100%;
     border: 1px solid black;
     float: left;
+	background-color: white;
+	opacity: 0.7;
 }
 
 #hints {
@@ -74,12 +117,14 @@ img#back-button {
 
 #popup {
     border: 1px solid black;
-    width: 400px;
-    height: 300px;
+    width: 0px;
+    height: 0px;
     position: absolute;
-    margin-left: 200px;
-    margin-top: 200px;
+    margin-left: 400px;
+    margin-top: 350px;
     display: none;
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
 
 }
 
