--- a/index.css
+++ b/index.css
@@ -1,38 +1,90 @@
 body {
-    width: 1000px;
-    height: 700px;}
-
-.page {
-        display: none;
-        width: 79%;
-        height: 100%;
-        border: 1px solid black;
-        float: left;
+	background-image : url("bg.jpg");
 }
 
-.rows {
-    height: 10%;
-    }
+#panel {
+    width: 1000px;
+    height: 700px;
+}
 
-.columns {
-        width: 10%;
-        height: 100%;
-        }
+div{
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
+}
+
+.page {
+    display: none;
+    width: 100%;
+    height: 100%;
+    float: left;
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
+}
+
+#main{
+    height: 100%;
+    width: 79%;
+	overflow:hidden;
+    float: left;
+    border: 1px solid black;
+}
+
+#support{
+	display: none;
+    height: 100%;
+    width: 200%;
+    float: left;
+	z-index: 30;
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
+}
+
+#support-1,#support-2{
+    height: 100%;
+    width: 50%;
+}
+
+.page-1{
+	background-color: red;
+	background-size: 100% 100%;
+	background-image: url("images/domatio001.jpg");
+}
+
+.tablePage{
+	background-color: green;
+}
+
+
+.drawerPage{
+	background-image: url("images/drawer.png");
+	background-size: 100% 100%;
+}
 
 #sideBar {
     width: 20%;
     height: 100%;
     border: 1px solid black;
     float: left;
+	background-color: white;
+	opacity: 0.7;
 }
 
 #hints {
-    height: 80%;
+    height: 65%;
     width: 100%;
 }
 
 #inventory {
     height: 20%;
+    width: 100%;
+}
+
+#knife {
+    display: none;
+}
+
+#equip {
+    height: 15%;
     width: 100%;
 }
 
@@ -60,7 +112,7 @@ img {
        display: block;
        }
 
-img#back-button {
+img.back-button {
     display: absolute;
     width: 30px;
     height: 30px;
@@ -69,11 +121,134 @@ img#back-button {
 
 #popup {
     border: 1px solid black;
-    width: 400px;
-    height: 300px;
+    width: 0px;
+    height: 0px;
     position: absolute;
-    margin-left: 200px;
-    margin-top: 200px;
+    margin-left: 400px;
+    margin-top: 350px;
     display: none;
+	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
+	transition: 2s;
 
+}
+
+#equip-table{
+	text-align:center;
+	width:34%;
+	float:right;
+}
+
+#equip-title, #equip-title td{
+	height: 33%;
+	border: 0px;
+	vertical-align:bottom;
+}
+
+#equip-tr, #equip-tr td{
+	height: 66%;
+}
+
+#loginForm {
+    margin-top: 11%;
+    margin-left: 47%;
+    display: block;
+}
+
+.loginPage {
+	background-size: 100% 100%;
+	background-image: url("images/laptop001.jpg");
+    background-color: green;
+}
+
+#nextArrow {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+	float:right;
+}
+
+#scenario {
+	padding-top: 50px;
+	font-weight: bold;
+	font-size: 24px;
+}
+
+#p2, #p3, #p4 {
+	display: none;
+}
+
+#curtain {
+    position: absolute;
+    left: 8px;
+    top: 8px;
+	height: 698px;
+	width: 792px;
+	display: block;
+    opacity: 0.7;
+	z-index: 800;
+	background-color: white;
+}
+#chair {
+	float: right;
+	display: inline;
+	padding-top: 42%;
+	padding-right: 3%;
+	width: 25%;
+	height: 25%;
+}
+
+#table {
+	float: left;
+	display: inline;
+	padding-top: 51%;
+	padding-left: 0%;
+	width: 60%;
+	height: 40%;
+	cursor:pointer;
+}
+#allColorBoxes{
+	padding-top : 43%;
+	padding-left : 239px;
+	width: 100%;
+	height: 60px;
+}
+#colorBox1{
+	background-image: url("images/yellowBox.png");
+	background-size: 44px 30px;
+	float: left;
+	display: inline;
+	width: 44px;
+	height: 30px;
+}
+
+#colorBox2{
+	background-image: url("images/greenBox.png");
+	background-size: 44px 30px;
+	margin-top : 5px;
+	margin-left : 3px;
+	float: left;
+	display: inline;
+	width: 44px;
+	height: 30px;
+}
+
+#colorBox3{
+	background-image: url("images/redBox.png");
+	background-size: 44px 30px;
+	margin-top : 10px;
+	margin-left : 3px;
+	float: left;
+	display: inline;
+	width: 44px;
+	height: 30px;
+}
+
+#colorBox4{
+	background-image: url("images/blueBox.png");
+	background-size: 44px 30px;
+	margin-top : 14px;
+	margin-left : 6px;
+	float: left;
+	display: inline;
+	width: 44px;
+	height: 30px;
 }
