--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@ body {
 	background-image : url("bg.jpg");
 }
 
+a:link {
+    text-decoration: none;
+}
+
 #panel {
     width: 1000px;
     height: 700px;
@@ -45,9 +49,12 @@ div{
 }
 
 .page-1{
-	background-color: red;
 	background-size: 100% 100%;
 	background-image: url("images/domatio001.jpg");
+}
+
+.clue-1 {
+	background-color: red;
 }
 
 .tablePage{
@@ -79,7 +86,7 @@ div{
     width: 100%;
 }
 
-#knife {
+#screwdriver {
     display: none;
 }
 
@@ -129,6 +136,7 @@ img.back-button {
     display: none;
 	-webkit-transition: 2s; /* For Safari 3.1 to 6.0 */
 	transition: 2s;
+	background-color: white;
 
 }
 
@@ -187,20 +195,30 @@ img.back-button {
 	z-index: 800;
 	background-color: white;
 }
+
+#ventilator {
+	width: 10%;
+	height: 10%;
+	margin-top: 29%;
+	margin-left: 31%;
+	cursor: pointer;
+}
+
 #chair {
 	float: right;
 	display: inline;
-	padding-top: 42%;
-	padding-right: 3%;
+	margin-top: 8%;
+	margin-right: 3%;
 	width: 25%;
 	height: 25%;
+	cursor: pointer;
 }
 
 #table {
 	float: left;
 	display: inline;
-	padding-top: 51%;
-	padding-left: 0%;
+	margin-top: 13%;
+	margin-left: 8%;
 	width: 60%;
 	height: 40%;
 	cursor:pointer;
@@ -251,4 +269,11 @@ img.back-button {
 	display: inline;
 	width: 44px;
 	height: 30px;
+}
+
+#colors-clue {
+	margin-top: 40%;
+	margin-left: 40%;
+	font-size: 25px;
+	font-weight: bold;
 }
