--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ div{
     width: 100%;
 }
 
-#screwdriver {
+#screwdriver, #key{
     display: none;
 }
 
@@ -223,9 +223,28 @@ img.back-button {
 	height: 40%;
 	cursor:pointer;
 }
+
+#colors-clue {
+	margin-top: 40%;
+	margin-left: 40%;
+	font-size: 25px;
+	font-weight: bold;
+}
+#keydiv{
+	margin-top : 240px;
+	margin-left : 365px;
+	background-size: 100px 100px;
+	width: 100px;
+	height: 100px;
+}
+
+#keyimage{
+	display: none;
+}
+
 #allColorBoxes{
-	padding-top : 43%;
-	padding-left : 239px;
+	padding-top : 0px;
+	padding-left : 236px;
 	width: 100%;
 	height: 60px;
 }
@@ -271,9 +290,14 @@ img.back-button {
 	height: 30px;
 }
 
-#colors-clue {
-	margin-top: 40%;
-	margin-left: 40%;
-	font-size: 25px;
-	font-weight: bold;
+#checkButton{
+	background-image: url("images/button.png");
+	background-size: 50px 35px;
+	margin-top : 14px;
+	margin-left : 6px;
+	float: left;
+	display: inline;
+	width: 50px;
+	height: 35px;
+	cursor:pointer;
 }
