--- a/index.css
+++ b/index.css
@@ -204,10 +204,26 @@ img.back-button {
 	cursor: pointer;
 }
 
+#chest {
+	width: 20%;
+	height: 15%;
+	margin-top: -12%;
+	margin-left: 23%;
+	cursor: pointer;
+}
+
+#bookcase {
+	width: 20%;
+	height: 30%;
+	margin-top: -11%;
+	margin-left: 57%;
+	cursor: pointer;
+}
+
 #chair {
 	float: right;
 	display: inline;
-	margin-top: 8%;
+	margin-top: -13%;
 	margin-right: 3%;
 	width: 25%;
 	height: 25%;
@@ -217,7 +233,7 @@ img.back-button {
 #table {
 	float: left;
 	display: inline;
-	margin-top: 13%;
+	margin-top: -3%;
 	margin-left: 8%;
 	width: 60%;
 	height: 40%;
