Login Screen Installed

--- a/index.css
+++ b/index.css
@@ -317,3 +317,20 @@ img.back-button {
 	height: 35px;
 	cursor:pointer;
 }
+
+input#userID, input#password{
+    width: 35%;
+    box-sizing: border-box;
+	 border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+}
+
+input#login {
+	background-color: #a5a7ab;
+	opacity: 0.7;
+	border-radius: 4px;
+	width: 20%;
+}
+
